# gaudi3-scale-starter

./: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  ADVANCED-OPTIMIZATION-SUMMARY.md  ARCHITECTURE.md  AUTONOMOUS-ENHANCEMENT-M6YON4.md  AUTONOMOUS-SDLC-SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  BACKLOG.md  CLI_USAGE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  FINAL_DEPLOYMENT_STATUS.md  GENERATION_5_RESEARCH_PUBLICATION.md  Makefile  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CHARTER.md  QUANTUM_RESEARCH_COMPLETION_REPORT.md  QUANTUM_TENSOR_NETWORK_RESEARCH_PUBLICATION.md  README.md  RELIABILITY_ENHANCEMENTS.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  TERRAGON_FINAL_COMPLETION_REPORT.md  TERRAGON_GENERATION_4_COMPLETION_REPORT.md  TERRAGON_GENERATION_5_FINAL_COMPLETION_REPORT.md  TERRAGON_GENERATION_6_AUTONOMOUS_INTELLIGENCE_FINAL_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  autonomous_intelligence_assessment.json  autonomous_intelligence_engine.py  (+75 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: performance_regression.yml  security_vulnerability.yml
.terragon/: automation-runner.py  autonomous-orchestrator.py  config.yaml  cost-optimization-report.json  cost-optimizer.py  discovered-items.json  discovery-engine.py  executive-summary.json  performance-monitor.py  performance-report.json  value-metrics.json
adaptive_models/: learning_state.json
backup-recovery/scripts/: backup-automation.sh
deployment/workflows/: README.md  production-deployment.yml
detailed_output/: training_results.json
docs/: DISTRIBUTED_DEPLOYMENT.md  README.md  ROADMAP.md  SDLC-ENHANCEMENT-SUMMARY.md
docs/adr/: README.md  adr-0001-gaudi-3-hardware-choice.md
docs/architecture/: overview.md
docs/deployment/: BUILD.md
docs/governance/: policy-as-code.md
enhanced_gen1_output/: checkpoint_epoch_0.json  checkpoint_epoch_1.json  checkpoint_epoch_2.json  enhanced_training_config.json  enhanced_training_metrics.json  enhanced_training_summary.json
enhanced_gen3_output/: scale_results.json
error_test_output/: best_model.json  training_results.json
example_configs/: benchmark_config.yaml  cluster_config.yaml  training_config.yaml
examples/: distributed_deployment_example.py  enhanced_usage_example.py  simple_usage_example.py
gen1_demo_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  checkpoint_epoch_3.json  checkpoint_epoch_4.json  checkpoint_epoch_5.json  training_results.json
gen2_robust_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  checkpoint_epoch_3.json  training_results.json
gen3_node_0_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  training_results.json
gen3_node_1_output/: best_model.json  checkpoint_epoch_1.json  training_results.json
gen3_node_2_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  training_results.json
gen3_node_3_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  training_results.json
gen4_autonomous_research_output/: autonomous_research_results.json  research_state.json
gen4_benchmark_suite_output/: comprehensive_benchmark_results.json  generation_4_benchmark_summary.json
gen4_global_deployment_output/: generation_4_deployment_summary.json  global_deployment_results.json  global_regions.json
gen4_validation_output/: comprehensive_validation_results.json  generation_4_validation_summary.json
generation_7_deployment_output/: deployment_summary_global_deployment_1756183724.json  deployment_summary_global_deployment_1756183728.json  deployment_summary_global_deployment_1756183732.json  global_deployment_global_deployment_1756183724.json  global_deployment_global_deployment_1756183728.json  global_deployment_global_deployment_1756183732.json
generation_7_output/: amplification_result_task_1756182630.json  amplification_result_task_1756182631.json  amplification_result_task_1756182632.json
generation_7_quality_output/: quality_assessment_quality_assessment_gen7_intelligence_amplifier_production_1756183470.json  quality_assessment_quality_assessment_hyper_scale_orchestrator_enterprise_1756183472.json  quality_assessment_quality_assessment_quantum_load_balancer_staging_1756183471.json  quality_summary_quality_assessment_gen7_intelligence_amplifier_production_1756183470.json  quality_summary_quality_assessment_hyper_scale_orchestrator_enterprise_1756183472.json  quality_summary_quality_assessment_quantum_load_balancer_staging_1756183471.json
monitoring/: prometheus.yml
monitoring_demo_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  training_results.json
optimized_output/: optimized_checkpoint_epoch_2.json  optimized_checkpoint_epoch_4.json  optimized_checkpoint_epoch_6.json
output/: best_model.json  checkpoint_epoch_1.json  checkpoint_epoch_10.json  checkpoint_epoch_2.json  checkpoint_epoch_3.json  checkpoint_epoch_4.json  checkpoint_epoch_5.json  checkpoint_epoch_6.json  checkpoint_epoch_7.json  checkpoint_epoch_8.json  checkpoint_epoch_9.json
production_deployment/: Dockerfile  docker-compose.yml
quick_demo_output/: checkpoint_epoch_1.json  checkpoint_epoch_2.json  checkpoint_epoch_3.json  training_results.json
research_framework/: CITATION.cff  README.md  quantum_benchmark_suite.py  quantum_hybrid_research_report.md  quantum_hybrid_scheduler.py  requirements.txt  research_validation_results.json  research_validation_summary.md  run_experiments.py  validation_results.py
scripts/: container-optimization.sh  setup_dev_env.sh  update_version.py
simplified_gen2_output/: checkpoint_epoch_0_batch_0.json  checkpoint_epoch_0_batch_50.json  checkpoint_epoch_1_batch_0.json  checkpoint_epoch_1_batch_50.json  checkpoint_epoch_2_batch_0.json  checkpoint_epoch_2_batch_50.json  robust_results.json
src/: test_manual.py
tests/: __init__.py  conftest.py
(+199 files in other folders)
